front refactor for different mfa endpoints
